# ESP32

esp32_driver/: README.md
esp32_driver/button/Key_LongShort/: README.md  button.c  main.c
esp32_example/: README.md
esp32_example/ble/: README.md
esp32_example/esp32_aliot/: CMakeLists.txt  README.md
esp32_example/esp32_aliot/main/: main.c
esp32_example/esp32_aliot/main/src/: aliot.c  aliot.h  aliot_dm.c  aliot_dm.h  aliot_mqtt.c  aliot_mqtt.h  aliot_register.c  (+2 more)
esp32_example/lvgl_st7789_cst8l6t/: .gitignore  CMakeLists.txt  README.md  partitions.csv
esp32_example/lvgl_st7789_cst8l6t/main/: CMakeLists.txt  idf_component.yml  main.c  ui_show.c  ui_show.h  ws2812.c  ws2812.h
esp32_example/mqtt/: README.md
esp32_example/mqtt/main/: main.c  simple_wifi_sta.c
esp32_example/ntc_adc/: README.md
esp32_example/player/: CMakeLists.txt  README.md  partitions.csv
esp32_example/player/main/: CMakeLists.txt  idf_component.yml  main.c  mjpeg_frame.c  mjpeg_frame.h  sdcard_file.c  sdcard_file.h  st7789_cst816t.c  st7789_cst816t.h  ui_show.c  ui_show.h
esp32_example/wifi_smartconfig/: README.md
esp32_example/wifi_smartconfig/main/: main.c  wifi_smartconfig.c
esp32_example/wokwi_dht22/: CMakeLists.txt  README.md  diagram.json  wokwi.toml
esp32_example/wokwi_dht22/main/: CMakeLists.txt  wokwi_dht22.c
esp32_example/wokwi_ssd1306_lvgl/: README.md  diagram.json
esp32_example/wokwi_ssd1306_lvgl/main/: i2c_oled_example_main.c  lvgl_demo_ui.c
esp32_example/wokwi_ws2812/: README.md  diagram.json  wokwi.toml
esp32_example/wokwi_ws2812/main/: main.c
